<resources>
    <string name="app_name">DavePluxAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="action_discover">Discover</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disonnect</string>
    <string name="action_newpaired">Pair with</string>
    <string name="action_unpaired">Un Pair</string>
    <string name="action_paired">Paired</string>
    <string name="action_result"></string>
    <string name="action_on">BLE ON</string>
    <string name="action_off">BLE OFF</string>
    <string name="action_description">Description</string>
    <string name="action_default_mac">00:07:80:D8:AB:52</string>
    <string name="radio_conn">Connected</string>
    <string name="radio_disc">Disconnected</string>
    <string name="action_back">Main Menu</string>
    <string name="action_next">See Graph</string>

</resources>
