<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.apps.dave.davepluxandroid.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_on"
        android:orderInCategory="100"
        android:title="@string/action_on"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_off"
        android:orderInCategory="100"
        android:title="@string/action_off"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_paired"
        android:orderInCategory="100"
        android:title="@string/action_paired"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_newpaired"
        android:orderInCategory="100"
        android:title="@string/action_newpaired"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unpaired"
        android:orderInCategory="100"
        android:title="@string/action_unpaired"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_discover"
        android:orderInCategory="100"
        android:title="@string/action_discover"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/action_connect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="100"
        android:title="@string/action_disconnect"
        app:showAsAction="never" />
</menu>
